gvsigdocs/es/source/scripting_devel_guide/2.4/index.rst
.. gvsig documentation master file, created by
   sphinx-quickstart on Mon Aug 01 08:10:38 2016.
   You can adapt this file completely to your liking, but it should at least
   contain the root `toctree` directive.

Documentación de Scripting para gvSIG desktop 2.4
===================================================

Tabla de contenidos
-------------------

.. toctree::
   :maxdepth: 2
   :numbered:

   introduccion.rst
   editor_de_scripts.rst
   modelo_de_objetos_simplificado.rst
   modelo_de_clases_simplificado.rst
   modulo_commonsdialog.rst
   cargando_capas.rst
   otras_fuentes_datos.rst
   acceso_a_objetos.rst
   consulta_de_entidades.rst
   trabajando_con_esquemas.rst
   trabajando_con_capas.rst
   modulo_geom.rst
   interfaces_visuales.rst
   leyendas.rst
   geoprocesos.rst
   docs_gvpy.rst

   evaluadores.rst
   capturando_eventos.rst
   usando_librerias_externas.rst
   rscript.rst
   internacionalizacion.rst
   explorers.rst
   manejando_errores.rst
   informacion_extra.rst

Enlaces
-------
.. _javadocs de gvSIG: http://downloads.gvsig.org/download/gvsig-desktop-testing/dists/2.4.0/docs/javadocs/html/
.. _Blog de gvSIG: https://blog.gvsig.org/
.. _gvSIG.com: http://www.gvsig.com/es/
.. _Jython book: http://www.jython.org/jythonbook/en/1.0/

* Enlace a los `javadocs de gvSIG`_
* `Blog de gvSIG`_
* `gvSIG.com`_
* `Jython book`_

Índices
-------

* :ref:`genindex`
* :ref:`search`
